# AndoridOpenSSL

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: cipher.cpp  zsd.cpp
app/src/main/java/com/alley/openssl/activity/: MainActivity.java
app/src/main/java/com/alley/openssl/util/: JniUtils.java
gradle/wrapper/: gradle-wrapper.properties
